Revisions to config to store data in a non-dated directory.  This will be faster than having multiple copies of the same output file

--- a/data-collection/config/config_base.cfg
+++ b/data-collection/config/config_base.cfg
@@ -50,7 +50,7 @@ hours_to_pass_for_redownload_by_rss_crawler = 20
 # Number of crawlers, that should crawl parallel
 # not counting in daemonized crawlers
 # default: 
-number_of_parallel_crawlers = 25
+number_of_parallel_crawlers = 60
 
 # Number of daemons, will be added to daemons.
 # default: 10
@@ -171,7 +171,7 @@ working_path = ~/news-please-repo/
 # To be able to use cleanup commands, it should also start with a static folder name like 'data'.
 #
 # default: %working_path/data/%time_execution(%Y)/%time_execution(%m)/%time_execution(%d)/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
-local_data_directory = %working_path/data/%time_execution(%Y)/%time_execution(%m)/%time_execution(%d)/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
+local_data_directory = %working_path/data/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
 
 # Toggles whether leading './' or '.\' from above local_data_directory should be removed when saving the path into the Database
 # True: ./data would become data
