--- a/data-collection/config/config_newsite.cfg
+++ b/data-collection/config/config_newsite.cfg
@@ -171,7 +171,7 @@ working_path = ~/news-please-repo/
 # To be able to use cleanup commands, it should also start with a static folder name like 'data'.
 #
 # default: %working_path/data/%time_execution(%Y)/%time_execution(%m)/%time_execution(%d)/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
-local_data_directory = %working_path/data/%time_execution(%Y)/%time_execution(%m)/%time_execution(%d)/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
+local_data_directory = %working_path/data/%appendmd5_full_domain(32)/%appendmd5_url_directory_string(60)_%appendmd5_max_url_file_name_%timestamp_download.html
 
 # Toggles whether leading './' or '.\' from above local_data_directory should be removed when saving the path into the Database
 # True: ./data would become data
