uploading EDA and wrangling notebooks along with other files

--- a/data-collection/config_newsite/config.cfg
+++ b/data-collection/config_newsite/config.cfg
@@ -276,7 +276,7 @@ LOG_FORMAT = [%(asctime)s %(name)s:%(lineno)d|%(levelname)s] %(message)s
 
 # Can be a filename or None
 # default: None
-LOG_FILE = 'logfiles/log.txt'
+LOG_FILE = 'log.txt'
 
 LOG_DATEFORMAT = %Y-%m-%d %H:%M:%S
 
@@ -308,7 +308,7 @@ CONCURRENT_REQUESTS_PER_DOMAIN=4
 
 # User-agent activation
 # default: 'news-please (+http://www.example.com/)'
-USER_AGENT = 'Googlebot'
+USER_AGENT = 'news-please (+http://www.example.com/)'
 
 # Pipeline activation
 # Syntax: '<relative location>.<Pipeline name>': <Order of execution from 0-1000>
