--- a/data-collection/config/config_base.cfg
+++ b/data-collection/config/config_base.cfg
@@ -308,7 +308,7 @@ CONCURRENT_REQUESTS_PER_DOMAIN=4
 
 # User-agent activation
 # default: 'news-please (+http://www.example.com/)'
-USER_AGENT = 'Googlebot'
+USER_AGENT = 'news-please (+http://www.example.com/)'
 
 # Pipeline activation
 # Syntax: '<relative location>.<Pipeline name>': <Order of execution from 0-1000>
