--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# mac stuff
+.DS_Store
+
+# work dir
+experiment/
+api/model5c/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
